--- a/.github/workflows/sign-commits.yml
+++ b/.github/workflows/sign-commits.yml
@@ -15,12 +15,12 @@ jobs:
         id: check_team
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.PAT_TOKEN }}  # Needs 'read:org' scope
+          github-token: ${{ secrets.PAT_TOKEN }}
           script: |
             try {
               const response = await github.rest.teams.getMembershipForUserInOrg({
                 org: context.repo.owner,
-                team_slug: 'your-team-slug',  // Replace with your team slug
+                team_slug: 'test-team',
                 username: context.payload.pull_request.user.login
               });
               return response.data.state === 'active';
